UPDATE and FIX: Remove Product method implemented inside the Manager Menu.